@@ -6,7 +6,7 @@ Requires Python 2.1 or better.
 
 This file contains the main make_IPython() starter function.
 
-$Id: ipmaker.py 2887 2007-12-12 08:28:43Z fperez $"""
+$Id: ipmaker.py 2899 2007-12-28 08:32:59Z fperez $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2006 Fernando Perez. <fperez@colorado.edu>
@@ -190,25 +190,26 @@ object?   -> Details about 'object'. ?object also works, ?? prints more.
                       autoindent = 0,
                       automagic = 1,
                       banner = 1,
-                      cache_size = 1000,
                       c = '',
+                      cache_size = 1000,
                       classic = 0,
-                      colors = 'NoColor',
                       color_info = 0,
+                      colors = 'NoColor',
                       confirm_exit = 1,
                       debug = 0,
                       deep_reload = 0,
                       editor = '0',
+                      gthread = 0,
                       help = 0,
                       interact = 1,
                       ipythondir = ipythondir_def,
                       log = 0,
                       logfile = '',
                       logplay = '',
-                      multi_line_specials = 1,
                       messages = 1,
-                      object_info_string_level = 0,
+                      multi_line_specials = 1,
                       nosep = 0,
+                      object_info_string_level = 0,
                       pdb = 0,
                       pprint = 0,
                       profile = '',
@@ -216,31 +217,30 @@ object?   -> Details about 'object'. ?object also works, ?? prints more.
                       prompt_in2 = '   .\\D.: ',
                       prompt_out = 'Out[\\#]: ',
                       prompts_pad_left = 1,
+                      pylab = 0,
                       pylab_import_all = 1,
-                      quiet = 0,
+                      q4thread = 0,
+                      qthread = 0,
                       quick = 0,
+                      quiet = 0,
+                      rcfile = 'ipythonrc' + rc_suffix,
                       readline = 1,
                       readline_merge_completions = 1,
                       readline_omit__names = 0,
-                      rcfile = 'ipythonrc' + rc_suffix,
                       screen_length = 0,
                       separate_in = '\n',
                       separate_out = '\n',
                       separate_out2 = '',
                       system_header = 'IPython system call: ',
                       system_verbose = 0,
-                      gthread = 0,
-                      qthread = 0,
-                      q4thread = 0,
-                      wthread = 0,
-                      pylab = 0,
                       term_title = 1,
                       tk = 0,
                       upgrade = 0,
                       Version = 0,
-                      xmode = 'Verbose',
                       wildcards_case_sensitive = 1,
+                      wthread = 0,
                       wxversion = '0',
+                      xmode = 'Context',
                       magic_docstrings = 0,  # undocumented, for doc generation
                       )
     
